pkg/deployment/testdata/snapshots/simple/stages/dev/kube-resources/riser-managed/apps/deployments/myapp/deployment.myapp.yaml
# DO NOT MODIFY! This file was generated by the Riser platform. Changes will be lost
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    riser.dev/generation: "3"
  creationTimestamp: null
  labels:
    riser.dev/app: myapp
    riser.dev/deployment: myapp
    riser.dev/stage: dev
  name: myapp
  namespace: apps
spec:
  selector:
    matchLabels:
      riser.dev/deployment: myapp
  strategy: {}
  template:
    metadata:
      annotations:
        riser.dev/generation: "3"
        sidecar.istio.io/rewriteAppHTTPProbers: "true"
      creationTimestamp: null
      labels:
        riser.dev/app: myapp
        riser.dev/deployment: myapp
        riser.dev/stage: dev
    spec:
      containers:
      - env:
        - name: MYSECRET
          valueFrom:
            secretKeyRef:
              key: data
              name: myapp-mysecret
              optional: false
        image: :0.0.1
        name: myapp
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 256M
          requests:
            cpu: 125m
            memory: 128M
      enableServiceLinks: false
status: {}
