pkg/deployment/testdata/snapshots/simple/stages/dev/kube-resources/riser-managed/apps/deployments/myapp/service.myapp.yaml
# DO NOT MODIFY! This file was generated by the Riser platform. Changes will be lost
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  annotations:
    riser.dev/generation: "3"
  creationTimestamp: null
  labels:
    riser.dev/app: myapp
    riser.dev/deployment: myapp
    riser.dev/stage: dev
  name: myapp
  namespace: apps
spec:
  template:
    metadata:
      annotations:
        autoscaling.knative.dev/minScale: "1"
        riser.dev/generation: "3"
      creationTimestamp: null
      labels:
        riser.dev/app: myapp
        riser.dev/deployment: myapp
        riser.dev/stage: dev
    spec:
      containers:
      - env:
        - name: MYSECRET
          valueFrom:
            secretKeyRef:
              key: data
              name: myapp-mysecret
              optional: false
        image: :0.0.1
        name: myapp
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
