pkg/deployment/testdata/snapshots/simple/stages/dev/kube-resources/riser-managed/apps/deployments/myapp/serving.knative.dev.route.myapp.yaml
# DO NOT MODIFY! This file was generated by the Riser platform. Changes will be lost
apiVersion: serving.knative.dev/v1
kind: Route
metadata:
  annotations:
    riser.dev/revision: "3"
  creationTimestamp: null
  labels:
    riser.dev/app: myapp
    riser.dev/deployment: myapp
    riser.dev/stage: dev
  name: myapp
  namespace: apps
spec:
  traffic:
  - percent: 100
    revisionName: myapp-1
    tag: r1
