pkg/deployment/testdata/snapshots/simple/stages/dev/kube-resources/riser-managed/apps/deployments/myapp/virtualservice.apps-myapp-8080.yaml
# DO NOT MODIFY! This file was generated by the Riser platform. Changes will be lost
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  creationTimestamp: null
  labels:
    app: myapp
    deployment: myapp
    riser-app: v1
    stage: dev
  name: apps-myapp-8080
  namespace: apps
spec:
  gateways:
  - riser-system/public-default
  - mesh
  hosts:
  - myapp.apps.dev.riser.org
  - myapp.apps.svc.cluster.local
  http:
  - route:
    - destination:
        host: myapp.apps.svc.cluster.local
